Fix pop-up msg appearing on mobile

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
   flex-direction: column;
 }
 
+.anon-msg {
+  scale: 0;
+}
+
 header {
   display: flex;
   align-items: center;
